# survey-of-software

./: .gitignore  ADDING-RESEARCH.md  CLAUDE.md  DEPLOYMENT.md  EXTRACTION_REPORT.md  LICENSE  PR-WORKFLOW.md  README.md  RESEARCH-AUTOMATION-COMPLETE.md  RIG-STRUCTURE.md  SOURCES_AUDIT_REPORT.md  VALIDATION-ENFORCEMENT.md  build_similarity_matrix.py  convert_research.py  docusaurus.config.ts  extract-taxonomy.py  extract_libraries_strict.py  extract_library_metadata.py  extract_survey_attributes.py  filter_libraries.py  fix-mdx-brackets.py  fix-survey-links.py  hugo.toml  package-lock.json  package.json  scrape_pypi_metadata.py  sidebars.ts  update-sidebar.py  update-survey-index.py
.beads/: issues.jsonl
.claude/: settings.json
.stash/: 1.172-DOMAIN_EXPLAINER.md
analyses/: 00-bootstrap-labels.yaml  BEADS_DESIGN_PROPOSAL.md  BUSINESS_OVERVIEW.md  SLACKBOT-EFFICIENCY-OPPORTUNITIES.md  YAML_UPDATES_COMPLETE.md  vikunja-labels.yaml
assets/: _custom.scss
content/: _index.md  about.md  license.md  skill.md  vision.md
data/: survey-taxonomy.yaml
docs/: SEO_FRONTMATTER_PROCESS.md  about.md  collections.md  index.md  library-embeddings-codebase-sampling.md  license.md  vision.md
layouts/: sitemap.xml
library-embeddings/: PRACTICE.md  PUBLICATION.md  README.md  RESEARCH.md
library-embeddings/cli/: LICENSE  README.md  pyproject.toml
library-embeddings/cli/src/library_embeddings/: __init__.py  cli.py  embeddings.py
library-embeddings/cli/src/library_embeddings.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
recipe-embeddings/: .gitignore  README.md  demo_pantry.sh  pyproject.toml  recipe-emb.sh  test_pantry.txt
recipe-embeddings/docs/: data-sources.md  recipe-embeddings-prior-art.md  training-guide.md
recipe-embeddings/recipe_emb/: __init__.py  cli.py  pantry.py
recipe-embeddings/scripts/: download_recipenlg.py  explore_embeddings.py  extract_ingredients.py  normalize_ingredients.py  train_embeddings.py
research/: README.md  (+4 more)
(+2434 files in other folders)
