[project]
name = "library-embeddings"
version = "0.1.0"
description = "Discover Python library relationships through embeddings"
authors = [{name = "Survey of Software", email = "noreply@modelcitizendeveloper.com"}]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["embeddings", "libraries", "discovery", "similarity", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "click>=8.0",
    "gensim>=4.0",
    "numpy>=1.20",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://research.modelcitizendeveloper.com"
Documentation = "https://github.com/modelcitizendeveloper/library-embeddings"
Repository = "https://github.com/modelcitizendeveloper/survey-of-software"

[project.scripts]
lib-emb = "library_embeddings.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
library_embeddings = ["data/*.model", "data/*.json"]
